--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,30 +18,30 @@ android {
             enabled false
         }
     }
-//
-//    signingConfigs {
-//        try {
-//            debug {
-//                storeFile file("../../testing_release.kestore.jks")
-//                storePassword DEBUG_STORE_PASSWORD
-//                keyAlias DEBUG_KEYSTORE_ALLIAS
-//                keyPassword DEBUG_KEY_PASSWORD
-//            }
-//        }
-//        catch (final ignored) {
-//            throw new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.")
-//        }
-//        try {
-//            release {
-//                storeFile file("../../testing_release.kestore.jks")
-//                storePassword RELEASE_STORE_PASSWORD
-//                keyAlias RELEASE_KEYSTORE_ALIAS
-//                keyPassword RELEASE_KEY_PASSWORD
-//            }
-//        } catch (final ignored) {
-//            throw new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.")
-//        }
-//    }
+
+    signingConfigs {
+        try {
+            debug {
+                storeFile file("../../testing_release.kestore.jks")
+                storePassword DEBUG_STORE_PASSWORD
+                keyAlias DEBUG_KEYSTORE_ALLIAS
+                keyPassword DEBUG_KEY_PASSWORD
+            }
+        }
+        catch (final ignored) {
+            throw new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.")
+        }
+        try {
+            release {
+                storeFile file("../../testing_release.kestore.jks")
+                storePassword RELEASE_STORE_PASSWORD
+                keyAlias RELEASE_KEYSTORE_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+            }
+        } catch (final ignored) {
+            throw new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.")
+        }
+    }
 
     buildTypes {
         debug {
@@ -121,4 +121,12 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+
+    // rx
+    compile 'io.reactivex:rxandroid:1.2.0'
+    compile 'io.reactivex:rxjava:1.1.4'
+
+    // parcel
+    compile 'org.parceler:parceler-api:1.1.2'
+    apt 'org.parceler:parceler:1.1.2'
 }
