--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,16 +90,15 @@ dependencies {
     // view theme and layout
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
 
     // view binding
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
     // common view stuff
-    compile('com.github.kibotu:common.android.utils:0.4.2') {
-        exclude group: 'com.google.android.gms'
+    compile('com.github.kibotu:common.android.utils:0.4.4') {
         exclude group: 'com.android.support'
-        exclude module: 'net.kibotu.android.deviceinfo'
         exclude module: 'butterknife'
     }
 
@@ -129,4 +128,10 @@ dependencies {
     // parcel
     compile 'org.parceler:parceler-api:1.1.2'
     apt 'org.parceler:parceler:1.1.2'
+
+    // ga
+    compile 'com.github.kibotu:BloodHound:1.0.5'
+
+    // dialog effect
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
