--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,16 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:launchMode="singleInstance"
         android:allowBackup="true"
+        tools:replace="android:icon"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
         android:name=".PlacesApplication"
         android:supportsRtl="true"
+        android:largeHeap="true"
+        android:installLocation="auto"
         android:theme="@style/AppTheme">
 
         <meta-data
