--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,29 +19,29 @@ android {
         }
     }
 
-    signingConfigs {
-        try {
-            debug {
-                storeFile file("../../testing_release.kestore.jks")
-                storePassword DEBUG_STORE_PASSWORD
-                keyAlias DEBUG_KEYSTORE_ALLIAS
-                keyPassword DEBUG_KEY_PASSWORD
-            }
-        }
-        catch (final ignored) {
-            throw new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.")
-        }
-        try {
-            release {
-                storeFile file("../../testing_release.kestore.jks")
-                storePassword RELEASE_STORE_PASSWORD
-                keyAlias RELEASE_KEYSTORE_ALIAS
-                keyPassword RELEASE_KEY_PASSWORD
-            }
-        } catch (final ignored) {
-            throw new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.")
-        }
-    }
+//    signingConfigs {
+//        try {
+//            debug {
+//                storeFile file("../../testing_release.kestore.jks")
+//                storePassword DEBUG_STORE_PASSWORD
+//                keyAlias DEBUG_KEYSTORE_ALLIAS
+//                keyPassword DEBUG_KEY_PASSWORD
+//            }
+//        }
+//        catch (final ignored) {
+//            throw new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.")
+//        }
+//        try {
+//            release {
+//                storeFile file("../../testing_release.kestore.jks")
+//                storePassword RELEASE_STORE_PASSWORD
+//                keyAlias RELEASE_KEYSTORE_ALIAS
+//                keyPassword RELEASE_KEY_PASSWORD
+//            }
+//        } catch (final ignored) {
+//            throw new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.")
+//        }
+//    }
 
     buildTypes {
         debug {
@@ -88,25 +88,19 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
 
     // view theme and layout
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
 
     // view binding
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
     // common view stuff
-    compile('com.github.kibotu:common.android.utils:0.4.4') {
-        exclude group: 'com.android.support'
-        exclude module: 'butterknife'
-    }
+    compile 'com.github.kibotu:common.android.utils:0.4.6'
 
     // device
-    compile ('com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2'){
-        exclude group: 'com.android.support' // regarding appcompat
-        exclude module: 'app' // only add lib to your project
-    }
+    compile 'com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2'
 
     // location tracking
     compile('com.google.android.gms:play-services-location:8.4.0')
