--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
+apply plugin: 'kotlin-android'
 apply plugin: 'android-apt'
 apply plugin: "me.tatarka.retrolambda"
 
@@ -19,6 +20,10 @@ android {
         jackOptions {
             enabled false
         }
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
     }
 
     signingConfigs {
@@ -89,7 +94,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // multidex
     compile 'com.android.support:multidex:1.0.1'
@@ -138,4 +144,7 @@ dependencies {
 
     // dialog effect
     compile 'cn.pedant.sweetalert:library:1.3'
+
+    // testing
+    testCompile 'junit:junit:4.12'
 }
