--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,31 +25,31 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
-
-    signingConfigs {
-
-        try {
-            debug {
-                storeFile file("../../testing_release.kestore.jks")
-                storePassword DEBUG_STORE_PASSWORD
-                keyAlias DEBUG_KEYSTORE_ALLIAS
-                keyPassword DEBUG_KEY_PASSWORD
-            }
-        }
-        catch (final ignored) {
-            new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.").printStackTrace()
-        }
-        try {
-            release {
-                storeFile file("../../testing_release.kestore.jks")
-                storePassword RELEASE_STORE_PASSWORD
-                keyAlias RELEASE_KEYSTORE_ALIAS
-                keyPassword RELEASE_KEY_PASSWORD
-            }
-        } catch (final ignored) {
-            new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.").printStackTrace()
-        }
-    }
+//
+//    signingConfigs {
+//
+//        try {
+//            debug {
+//                storeFile file("../../testing_release.kestore.jks")
+//                storePassword DEBUG_STORE_PASSWORD
+//                keyAlias DEBUG_KEYSTORE_ALLIAS
+//                keyPassword DEBUG_KEY_PASSWORD
+//            }
+//        }
+//        catch (final ignored) {
+//            new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.").printStackTrace()
+//        }
+//        try {
+//            release {
+//                storeFile file("../../testing_release.kestore.jks")
+//                storePassword RELEASE_STORE_PASSWORD
+//                keyAlias RELEASE_KEYSTORE_ALIAS
+//                keyPassword RELEASE_KEY_PASSWORD
+//            }
+//        } catch (final ignored) {
+//            new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.").printStackTrace()
+//        }
+//    }
 
     buildTypes {
 
