--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,31 +25,31 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
-//
-//    signingConfigs {
-//
-//        try {
-//            debug {
-//                storeFile file("../../testing_release.kestore.jks")
-//                storePassword DEBUG_STORE_PASSWORD
-//                keyAlias DEBUG_KEYSTORE_ALLIAS
-//                keyPassword DEBUG_KEY_PASSWORD
-//            }
-//        }
-//        catch (final ignored) {
-//            new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.").printStackTrace()
-//        }
-//        try {
-//            release {
-//                storeFile file("../../testing_release.kestore.jks")
-//                storePassword RELEASE_STORE_PASSWORD
-//                keyAlias RELEASE_KEYSTORE_ALIAS
-//                keyPassword RELEASE_KEY_PASSWORD
-//            }
-//        } catch (final ignored) {
-//            new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.").printStackTrace()
-//        }
-//    }
+
+    signingConfigs {
+
+        try {
+            debug {
+                storeFile file("../../testing_release.kestore.jks")
+                storePassword DEBUG_STORE_PASSWORD
+                keyAlias DEBUG_KEYSTORE_ALLIAS
+                keyPassword DEBUG_KEY_PASSWORD
+            }
+        }
+        catch (final ignored) {
+            new InvalidUserDataException("You should define DEBUG_KEYSTORE_ALLIAS, DEBUG_STORE_PASSWORD, DEBUG_KEY_PASSWORD in gradle.properties.").printStackTrace()
+        }
+        try {
+            release {
+                storeFile file("../../testing_release.kestore.jks")
+                storePassword RELEASE_STORE_PASSWORD
+                keyAlias RELEASE_KEYSTORE_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+            }
+        } catch (final ignored) {
+            new InvalidUserDataException("You should define RELEASE_KEYSTORE_ALIAS, RELEASE_STORE_PASSWORD, RELEASE_KEY_PASSWORD in gradle.properties.").printStackTrace()
+        }
+    }
 
     buildTypes {
 
@@ -57,7 +57,7 @@ android {
             minifyEnabled false
             shrinkResources false
             zipAlignEnabled false
-            //signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -65,7 +65,7 @@ android {
             minifyEnabled false
             shrinkResources true
             zipAlignEnabled true
-            //signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -103,31 +103,22 @@ android {
         checkReleaseBuilds false
         abortOnError false
         ignoreWarnings true
+        disable 'InvalidPackage'
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-
+    // kotlin support
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // multidex
     compile 'com.android.support:multidex:1.0.1'
 
     // view theme and layout
-    compile "com.android.support:cardview-v7:$google_support_version"
+    compile "com.android.support:cardview-v7:23.4.0"
 
     // view binding
-    compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
-
-    // common view stuff
-    compile 'com.github.kibotu:common.android.utils:0.4.6'
-
-    // device
-    compile ('com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2') {
-        exclude group: 'com.android.support'
-    }
 
     // location tracking
     compile('com.google.android.gms:play-services-location:8.4.0')
@@ -137,24 +128,22 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.1.2'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.2'
 
+    // fonts
+    compile('uk.co.chrisjenx:calligraphy:2.2.0')
+
     // network
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.squareup.retrofit2:retrofit-mock:2.0.2'
-
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
 
     // rx
     compile 'io.reactivex:rxandroid:1.2.0'
-    compile 'io.reactivex:rxjava:1.1.4'
 
     // parcel
     compile 'org.parceler:parceler-api:1.1.2'
     apt 'org.parceler:parceler:1.1.2'
-
-    // ga
-    compile 'com.github.kibotu:BloodHound:1.0.5'
 
     // dialog effect
     compile 'cn.pedant.sweetalert:library:1.3'
@@ -164,4 +153,19 @@ dependencies {
 
     // onboarding
     compile 'com.ramotion.paperonboarding:paper-onboarding:1.0.0'
+
+    // common view stuff
+    compile 'com.github.kibotu:common.android.utils:0.5.0'
+
+    // device
+    compile 'com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2'
+
+    // material menu
+    compile 'com.github.kibotu:MaterialMenu:0.9.1'
+
+    // recyclerview presenter
+    compile 'com.github.kibotu:RecyclerViewPresenter:1.0.1'
+
+    // ga
+    compile 'com.github.kibotu:BloodHound:1.0.5'
 }
