--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ android {
             minifyEnabled false
             shrinkResources false
             zipAlignEnabled false
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -66,7 +66,7 @@ android {
             minifyEnabled false
             shrinkResources true
             zipAlignEnabled true
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
