--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,7 @@ android {
     }
 
     dexOptions {
-        incremental true
+//        incremental true
         preDexLibraries = true
         jumboMode = true
         javaMaxHeapSize "4g"
@@ -162,9 +162,6 @@ dependencies {
     // device
     compile 'com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2'
 
-    // material menu
-    compile 'com.github.kibotu:MaterialMenu:0.9.2'
-
     // recyclerview presenter
     compile 'com.github.kibotu:RecyclerViewPresenter:1.0.1'
 
@@ -173,6 +170,17 @@ dependencies {
 
     // float search view
     compile 'com.github.arimorty:floatingsearchview:1.1.2'
+
+
+
+    // navigation drawer
+    compile('com.mikepenz:materialdrawer:5.2.6@aar') {
+        transitive = true
+    }
+    compile('com.mikepenz:crossfadedrawerlayout:0.3.4@aar')
+    compile 'com.mikepenz:crossfader:1.3.7@aar'
+    compile "com.mikepenz:iconics-core:2.5.11@aar"
+    compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
 }
 
 
