--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     defaultConfig {
 
         applicationId "net.kibotu.berlinplaces"
-        minSdkVersion 21 // paperonboarding waiting for merging pull request
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -154,7 +154,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     // onboarding
-    compile 'com.ramotion.paperonboarding:paper-onboarding:1.0.0'
+    compile 'com.github.kibotu:paper-onboarding-android:1.0.3'
+    // compile 'com.ramotion.paperonboarding:paper-onboarding:1.0.0' // forces sdk 21
 
     // common view stuff
     compile 'com.github.kibotu:common.android.utils:0.5.0'
@@ -171,8 +172,6 @@ dependencies {
     // float search view
     compile 'com.github.arimorty:floatingsearchview:1.1.2'
 
-
-
     // navigation drawer
     compile('com.mikepenz:materialdrawer:5.2.6@aar') {
         transitive = true
@@ -181,6 +180,9 @@ dependencies {
     compile 'com.mikepenz:crossfader:1.3.7@aar'
     compile "com.mikepenz:iconics-core:2.5.11@aar"
     compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
+
+    // stack view
+    compile 'link.fls:swipestack:0.3.0'
 }
 
 
