--- a/app/build.gradle
+++ b/app/build.gradle
@@ -183,6 +183,11 @@ dependencies {
 
     // stack view
     compile 'link.fls:swipestack:0.3.0'
+
+    // leaks
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
 
 
