--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
 
-        applicationId "net.kibotu.berlinplaces"
+        applicationId "net.kibotu.berlin.night.events"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
