--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,7 @@ dependencies {
 
     // view theme and layout
     compile "com.android.support:cardview-v7:23.4.0"
+    compile 'com.android.support:palette-v7:23.4.0'
 
     // view binding
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
@@ -189,7 +190,6 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
-
 
 afterEvaluate {
     tasks.matching {
