--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # Created by .ignore support plugin (hsz.mobi)
+app/libs/
+app/src/androidTest/kotlin/
+app/src/main/kotlin/
+app/src/main/res/raw/
