--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,9 +115,13 @@ dependencies {
 
     // multidex
     compile 'com.android.support:multidex:1.0.1'
-
-    // view theme and layout
-    compile "com.android.support:cardview-v7:23.4.0"
+    compile 'com.android.support:support-annotations:23.4.0'
+    compile 'com.android.support:support-v13:23.4.0'
+    compile 'com.android.support:gridlayout-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:palette-v7:23.4.0'
 
     // view binding
@@ -160,16 +164,26 @@ dependencies {
     // compile 'com.ramotion.paperonboarding:paper-onboarding:1.0.0' // forces sdk 21
 
     // common view stuff
-    compile 'com.github.kibotu:common.android.utils:0.5.8'
-
+    compile('com.github.kibotu:common.android.utils:0.5.81') {
+        exclude group: 'com.android.support'
+    }
     // device
-    compile 'com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2'
-
-    // recyclerview presenter
-    compile 'com.github.kibotu:RecyclerViewPresenter:1.0.1'
+    compile('com.github.kibotu:net.kibotu.android.deviceinfo:1.1.2') {
+        exclude group: 'com.android.support'
+    }
+    compile('com.github.kibotu:recyclerviewItemDecorations:1.0.0') {
+        exclude group: 'com.android.support'
+    }
 
     // ga
-    compile 'com.github.kibotu:BloodHound:1.0.5'
+    compile('com.github.kibotu:BloodHound:1.0.5') {
+        exclude group: 'com.android.support'
+    }
+
+    // recyclerview presenter
+    compile('com.github.kibotu:RecyclerViewPresenter:1.1.0') {
+        exclude group: 'com.android.support'
+    }
 
     // float search view
     compile 'com.github.arimorty:floatingsearchview:1.1.2'
